Archive2/b3/da66a7f17aa11d/output
main.cpp:9:1: error: use of undeclared identifier 'cout'; did you mean 'std::cout'?
cout << "Hello from Jaguar!";
^~~~
std::cout
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/iostream:61:18: note: 'std::cout' declared here
  extern ostream cout;          /// Linked to standard output
                 ^
main.cpp:13:1: error: use of undeclared identifier 'cout'; did you mean 'std::cout'?
cout << "Goodbye from Jaguar!";
^~~~
std::cout
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/iostream:61:18: note: 'std::cout' declared here
  extern ostream cout;          /// Linked to standard output
                 ^
main.cpp:15:2: error: expected ';' after class
}
 ^
 ;
main.cpp:21:1: error: expected a class or namespace
JAGUARCPU::x86_Jaguar();
^
4 errors generated.
